- Ended all header, and all menu graphic. - Logout feature developed. - Fixed overflow bug. - Added all graphical media query for all devices. - Added new FE costants file. - Resolved backdrop bug with z-index. - Added new error message for login check. - Deleted logout reducer and file feature.

--- a/frontend/src/common/css/common.css
+++ b/frontend/src/common/css/common.css
@@ -12,7 +12,7 @@ a, a:hover{
     height: 100%;
     padding: 0;
     margin: 0;
-    overflow-x: hidden;
+    overflow: auto;
 }
 
 .row{
@@ -57,7 +57,6 @@ a, a:hover{
 
 /* Smartphone XS screen */
 @media (min-width: 300px){
-    /* CSS for spinner-height when there are forms. */
     .spinner-height{
         top: -20%;
     }
